# Project-_3

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
src/: DB_manager.py  vacancy_api_handler.py  working_with_databases_tables.py
tests/: conftest.py  test_DB_manager.py  test_vacancy_api_handler.py  test_working_with_databases_tables.py
